Fix runtime, also create log-manipulation.